@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="../jquery.metadata.js"></script>
 	<script type="text/javascript" src="../jquery.ajaxQueue.js"></script>
 	<script type="text/javascript" src="../jquery.validate.js"></script>
+	<script type="text/javascript" src="../additional-methods.js"></script>
 	<script type="text/javascript" src="js/test.js"></script>
 	
 	<style type="text/css">
