@@ -1,6 +1,7 @@
 1.2
 ---
 
+* Added us-phone-number method to additional-methods.js
 * Added AJAX-captcha validation example (based on http://psyrens.com/captcha/)
 * Added subformRequired-callback option to support easier validation of subforms
 * Added remember-the-milk-demo (thanks RTM team for the permission!)
